[package]
name = "house"
version = "0.1.5"
edition = "2021"

[features]
default = ["bevy_asset"]

bevy_asset = ["bevy_internal/bevy_asset"]

[dependencies]
bevy = { version = "0.10.0", features = ["jpeg"] }
bevy_internal = "0.10.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
